# moody-376-assistant

./: .dockerignore  .env.dev  .env.example  .gitignore  .lintstagedrc.mjs  CONTRIBUTING.md  Makefile  README.md  dev-requirements.txt  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
.github/actions/use-pnpm-dependencies/: action.yml
.github/workflows/: pull_request_checks.yml
api/: app.py  main.py
api/controllers/: __init__.py  boat_controller.py  chat_controller.py
api/dependencies/: __init__.py  agent.py  data_path.py
api/dtos/boat/: __init__.py  boat_dimensions_dto.py  boat_engine_dto.py  boat_profile_dto.py  boat_rigging_dto.py  boat_sail_area_dto.py  boat_specification_dto.py  boat_tanks_dto.py
api/dtos/chat/: __init__.py  assistant_activity.py
api/enums/: __init__.py
api/enums/api/: __init__.py  error_code_enum.py  route_enum.py
api/enums/chat/: __init__.py  assistant_activity_enum.py  chat_stream_event_type_enum.py  message_role_enum.py
api/models/: __init__.py  boat_profile_model.py
api/models/boat/: __init__.py  boat_profile_model.py  boat_specification_model.py
api/routers/: __init__.py  boat.py  chat.py
api/schemas/: __init__.py
api/schemas/boat/: __init__.py  boat_details.py  boat_dimensions.py  boat_tanks.py  (+16 more)
api/tools/: __init__.py  get_weather_by_location.py
api/utilities/: __init__.py
data/static/: boat_specification.json
deployment/: compose.development.yml
deployments/: compose.development.yml
migrations/: env.py
migrations/versions/: 6dbf5700fc2b_adds_boat_profiles_and_boat_.py  8f3c4f7a1d92_seed_moody_376_boat_specification.py  fcdaaa3aa3c1_adds_boats_profiles_table.py
web/: i18n.config.ts  store.ts
web/app/: layout.tsx  page.tsx
web/constants/: Store.ts
web/contexts/: StoreContext.ts
web/enums/: index.ts
web/errors/: index.ts
web/types/: index.ts
web/utilities/: index.ts
(+334 files in other folders)
