[project]
name = "oarbit"
version = "1.0.0"
description = "Oarbit is an onboard knowledge and maintenance copilot that centralizes technical documents, service logs, and operational notes for your vessel."
authors = [
  { name = "Kieran O'Neill", email = "hello@kieranoneill.com" }
]
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api"]
include-package-data = true

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
known_first_party = ["oarbit"]
profile = "black"

[tool.pylint."messages control"]
disable = "all"
enable = [
  "empty-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring"
]
ignore = ["setup.py", "__init__.py"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
